--- a/src/components/MapDisplay/MainPanel.css
+++ b/src/components/MapDisplay/MainPanel.css
@@ -1,8 +1,6 @@
 .p-orderlist-controls {
     display: none !important; /* Hides the left-side buttons */
 }
-
 .InteractiveRow{
-    display: block !important;
-    gap: 10px !important;
+    padding-bottom: 10px;
 }
