--- a/src/components/MapDisplay/MainPanel.css
+++ b/src/components/MapDisplay/MainPanel.css
@@ -4,3 +4,10 @@
 .InteractiveRow{
     padding-bottom: 10px;
 }
+
+
+.ExpandButton{
+    height: 50px;
+    border-top-right-radius: 30%;
+    border-bottom-right-radius: 30%;
+}
