--- a/src/components/MapDisplay/DetalPanel.css
+++ b/src/components/MapDisplay/DetalPanel.css
@@ -16,3 +16,12 @@
 .Detail{
     margin-top: 10px;
 }
+
+.buttonGroup{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: end;
+    margin-right: 10px;
+}
+
